<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_message"
            android:title="@string/nav_messages" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notifications"
            android:title="@string/nav_notification" />
        <item
            android:id="@+id/nav_my_items"
            android:icon="@drawable/ic_item"
            android:title="@string/nav_my_items" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/nav_profile"/>
    </group>

    <group
        android:id="@+id/menu_buttom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings"/>
        <item
            android:id="@+id/nav_help_feedback"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help_feedback"/>
        <item android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share"/>
    </group>
</menu>