<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="item"
                type="com.mabrouk.mohamed.lostandfound.model.Item"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.itemDetails.ItemDetailsActivity">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

        <ScrollView
                android:id="@+id/main_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/toolbar">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="vertical">


                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/rectangle_background">

                    <TextView
                            android:id="@+id/item_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/md_margin_small"
                            android:text="@{item.itemName}"
                            android:textAlignment="center"
                            android:textColor="@color/primaryColor"
                            android:textSize="18sp"/>

                    <ImageView
                            android:id="@+id/item_img"
                            android:layout_width="@dimen/detailsActivity_itemImage_width"
                            android:layout_height="@dimen/detailsActivity_itemImage_height"
                            android:layout_below="@id/item_name"
                            android:layout_centerHorizontal="true"
                            android:layout_margin="5dp"
                            android:src="@drawable/sample_img_2"
                            android:contentDescription="@string/item_image"/>
                </RelativeLayout>

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="6dp"
                        android:background="@drawable/rectangle_background"
                        android:padding="4dp">

                    <ImageView
                            android:id="@+id/time_iv"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:src="@drawable/ic_time"
                            android:contentDescription="@string/time_indicator"
                            android:layout_margin="8dp"/>

                    <TextView
                            android:id="@+id/date_time_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:padding="4dp"
                            android:text="@{item.postDateTime}"
                            android:textColor="@color/black"
                            android:layout_toEndOf="@id/time_iv"
                            android:layout_alignParentTop="true"/>

                    <ImageView
                            android:id="@+id/location_iv"
                            android:layout_width="26dp"
                            android:layout_height="26dp"
                            android:src="@drawable/ic_location"
                            android:layout_below="@id/time_iv"
                            android:contentDescription="@string/location_indicator"
                            android:layout_margin="8dp"/>

                    <TextView
                            android:id="@+id/location_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:padding="4dp"
                            android:text="@{item.district +` - `+ item.city}"
                            android:maxWidth="150dp"
                            android:textColor="@color/black"
                            android:layout_toEndOf="@id/location_iv"
                            android:layout_below="@id/date_time_tv"/>

                    <Button
                            android:id="@+id/show_on_map_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_margin="8dp"
                            android:text="show on map"
                            android:background="@drawable/call_owner_btn_bg"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:drawableStart="@drawable/ic_map"
                            android:drawablePadding="8dp"
                            android:padding="8dp"
                            android:layout_below="@id/date_time_tv"
                            android:layout_alignParentEnd="true"/>

                    <!--<View
                            android:id="@+id/line_separator"
                            android:layout_width="match_parent"
                            android:layout_height="1.5dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/line_separator"
                            android:layout_below="@id/location_tv"/>-->

                    <TextView
                            android:id="@+id/details_title_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:padding="4dp"
                            android:text="@string/item_details"
                            android:textColor="@color/primaryColor"
                            android:layout_below="@id/location_tv"/>

                    <TextView
                            android:id="@+id/details_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:text="@{item.itemDescription}"
                            android:textColor="@color/black"
                            android:layout_below="@id/details_title_tv"/>

                    <TextView
                            android:id="@+id/call_owner_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:padding="4dp"
                            android:textAlignment="center"
                            android:text="@string/have_you_seen_this_item"
                            android:textColor="@color/primaryColor"
                            android:layout_below="@id/details_tv"/>

                    <Button
                            android:id="@+id/call_owner_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="35dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/call_owner"
                            android:background="@drawable/call_owner_btn_bg"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:drawableStart="@drawable/ic_call"
                            android:drawablePadding="8dp"
                            android:padding="8dp"
                            android:layout_below="@id/call_owner_tv"
                            android:layout_centerHorizontal="true"/>


                    <!-- Comments Section -->
                    <!--<View
                            android:id="@+id/line_separator2"
                            android:layout_width="match_parent"
                            android:layout_height="1.5dp"
                            android:layout_margin="8dp"
                            android:background="@drawable/line_separator"
                            android:layout_below="@id/call_owner_btn"/>-->



                    <TextView
                            android:id="@+id/comments_title_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:padding="4dp"
                            android:text="@{String.format(@string/number_of_comments_title, item.numOfComments)}"
                            android:textColor="@color/primaryColor"
                            android:layout_below="@id/call_owner_btn"/>

                    <android.support.v7.widget.RecyclerView
                            android:id="@+id/comments_rv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/comments_title_tv"
                            android:clipToPadding="false"
                            android:scrollbars="vertical"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

                </RelativeLayout>

                <!-- add comment -->
                <LinearLayout
                        android:id="@+id/comment_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/rectangle_background"
                        android:layout_marginTop="6dp"
                        android:layout_marginBottom="12dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginEnd="6dp">

                    <EditText
                            android:id="@+id/input_add_comment"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:hint="Write a comment..."
                            android:padding="8dp"
                            android:background="@null"
                            android:layout_gravity="center_vertical"/>
                    <ImageView
                            android:id="@+id/add_comment_iv"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="26dp"
                            android:layout_margin="8dp"
                            android:src="@drawable/ic_send"
                            android:layout_gravity="center_vertical"/>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>